# ai-delegation-readiness

./: .gitignore  CLAUDE.md  Dockerfile  README.ja.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
definitions/: delegation-matrix.yaml  four-layer.yaml
docs/: 01_four_layer_framework.md  02_audit_log_schema.md  03_delegation_matrix.md  04_agent_loop_audit_gap.md  04_audit_log_gap_check.md
examples/: audit-log-sample.json
examples/business/: sample-expense-approval.yaml
examples/judgments/: sample-judgments.yaml
examples/overlays/sample-company/: extra-rules.yaml
examples/skills/audit-log-validate/: SKILL.md
examples/skills/delegation-readiness-check/: SKILL.md
schemas/: audit-log.schema.json
src/adr/: __init__.py  check_overlay.py  check_readiness.py  cli.py  list_definitions.py  overlay.py  score_delegation.py  validate_audit_log.py
src/ai_delegation_readiness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_check_readiness.py  test_cli.py  test_golden.py  test_overlay.py  test_score_delegation.py  test_validate_audit_log.py
